--- a/scene/index.html
+++ b/scene/index.html
@@ -80,6 +80,7 @@
         <a href="https://code.google.com/p/dat-gui/" target="_blank">dat-gui</a>
         <span id="lib_proj4js"> and <a href="https://trac.osgeo.org/proj4js/" target="_blank">Proj4js</a></span>
         .
+        <div>Source: Geospatial Information Authority of Japan. 5m DEM of Fundamental Geospatial Data and GSI Tiles (ort).</div>
       </div>
     </div>
   </div>
